--- a/css/styles.css
+++ b/css/styles.css
@@ -394,6 +394,106 @@ textarea {
     font-size: 18px;
 }
 
+/* ======== ESTILOS DE LOGIN.HTML ====== */
+#img-login-container {
+    display: flex;
+    justify-content: center;
+}
+
+#img-login {
+    width: 320px;
+    height: 120px;
+}
+
+#txt-login {
+    display: flex;
+    justify-content: center;
+    margin-bottom: 1%;
+}
+
+#error {
+    display: flex;
+    justify-content: center;
+}
+
+#login-error {
+    display: none;
+    justify-content: center;
+    padding: 1%;
+    background-color: rgb(248, 206, 206);
+    border-radius: 0.5rem;
+    margin-bottom: 12px;
+    width: 50%;
+}
+
+#form-login-cont {
+    display: flex;
+    justify-content: center;
+    text-align: center;
+}
+
+#form-login {
+    background-color: rgb(208, 212, 252);
+    border-radius: 1rem;
+    width: 50%;
+}
+
+#usuario {
+    margin-top: 24px !important;
+}
+
+#usuario, #contraseña {
+    color: rgb(50, 50, 50);
+    width: 70%;
+    font-size: 1rem;
+    font-weight: 400;
+    font-family: 'Public Sans', sans-serif;
+    border: 1px solid rgb(53, 103, 165);
+    border-radius: 8px;
+    padding: 12px;
+    margin: 12px;
+}
+
+#but-login {
+    font-size: 16px;
+    font-family: 'Public Sans', sans-serif;
+    margin-bottom: 14px;
+    padding: 12px;
+    background-color: rgb(4, 79, 172);
+    color: rgb(233, 233, 233);
+    border-radius: 8px;
+    border: 0;
+}
+
+#cont-forg-pass {
+    justify-content: center;
+    margin-bottom: 12px;
+}
+
+#forgotten-pass {
+    color: rgb(90, 90, 90);
+}
+
+#signup-cont {
+    margin-top: 3%;
+    display: block;
+    text-align: center;
+}
+
+.txt-signup {
+    margin-bottom: 8px;
+}
+
+#but-signup {
+    margin-top: 12px;
+    padding: 10px;
+    font-family: 'Public Sans', sans-serif;
+    font-size: 16px;
+    background-color: rgb(198, 209, 222);
+    border: 0;
+    border-radius: 8px;
+}
+
 /* ======== MEDIA QUERIES ======== */
 /* Permite que se muestren tres contenedores de datos actuales por fila
 cuando el ancho está entre 700 y 1200 px */
